<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Edit_profile">




    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Ed_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ed_profile"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/profile"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Ed_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/android_developer" />

    <ImageView
        android:id="@+id/Ed_wave_pic"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/Ed_desc"
        android:src="@drawable/profileui"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/Ed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ed_wave_pic"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/Ed_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/border2"
            android:textColor="#000000"
            android:autofillHints="name"
            android:inputType="textPersonName"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ed_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ed_name"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:text="@string/contact_number"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@drawable/border2"
            android:textColor="#000000"
            android:autofillHints="Contact"
            android:inputType="textAutoComplete"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Ed_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ed_number"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="5dp"
            android:text="@string/gender"
            android:textColor="#000"
            android:textSize="18sp" />


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:background="@drawable/border2"
            android:entries="@array/gender_sm"
            android:textColor="#E8E3E3" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/Ed_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ed_gender"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="5dp"
            android:text="@string/pr_district"
            android:textColor="#000"
            android:textSize="18sp" />


        <Spinner
            android:id="@+id/Ed_district_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:background="@drawable/border2"
            android:entries="@array/districts_sm"
            android:textColor="#E8E3E3" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/Ed_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ed_district"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="5dp"
            android:text="@string/pr_email"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/Ed_Email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:background="@drawable/border2"
            android:textColor="#000000"
            android:autofillHints="Email"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearlayout_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ed_Email"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:background="@drawable/round_border"
            android:backgroundTint="#9C27B0"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/pr_buttonupdate"


            android:textColor="#FAFAFA"
            tools:targetApi="m" />

    </LinearLayout>


</RelativeLayout>