<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".EditProfile">

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/edit_user_back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_arrow_back_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-40dp"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:gravity="center"
            android:text="Edit Profile"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />


    </LinearLayout>



    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lay1"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/open_sans"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/profile"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/v_job_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/social_rouded_input"
        android:fontFamily="@font/open_sans"
        android:text="@string/android_developer" />

    <ImageView
        android:id="@+id/imageview_pic"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_below="@+id/v_job_type"
        android:layout_marginStart="40dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/todo"
        android:fontFamily="@font/open_sans"
        android:foregroundGravity="center"
        android:src="@drawable/tt" />

    <LinearLayout
        android:id="@+id/linearlayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_pic"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/open_sans"
        android:orientation="horizontal"
        android:textAlignment="center">


        <TextView
            android:id="@+id/V_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:background="@drawable/social_rouded_input"
            android:fontFamily="@font/open_sans"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_1"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:textAlignment="center">


        <TextView
            android:id="@+id/v_contact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/contact_number"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_user_Mno"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:background="@drawable/social_rouded_input"
            android:fontFamily="@font/open_sans"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_2"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:textAlignment="center">


        <TextView
            android:id="@+id/V_gender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/gender"
            android:textColor="#000"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/user_gender_spinner"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:background="@drawable/border2"
            android:entries="@array/gender_sm"
            android:textColor="#E8E3E3" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_3"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:textAlignment="center">


        <TextView
            android:id="@+id/V_district"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/district"
            android:textColor="#000"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/user_district_spinner"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="93dp"
            android:background="@drawable/border2"
            android:entries="@array/districts_sm"
            android:textColor="#E8E3E3" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_4"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:textAlignment="center">


        <TextView
            android:id="@+id/V_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_user_email"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginStart="108dp"
            android:background="@drawable/social_rouded_input"
            android:fontFamily="@font/open_sans"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearlayout_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_5"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textAlignment="center">

        <Button
            android:id="@+id/btn_updateE"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/netblue"
            android:gravity="center"
            android:text="@string/edit_btn"
            android:fontFamily="@font/open_sans"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/user_delete_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/warningred"
            android:gravity="center"
            android:text="@string/delete_btn"
            android:fontFamily="@font/open_sans"
            android:textColor="#FFFFFF" />
    </LinearLayout>




</RelativeLayout>