<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_login">

    <RelativeLayout
        android:id="@+id/loginheader"
        android:layout_width="408dp"
        android:layout_height="108dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="93dp"
            android:layout_marginEnd="93dp"
            android:padding="10dp"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/relativeLayout"
        android:layout_width="223dp"
        android:layout_height="495dp"
        android:background="@drawable/log_panel"
        app:layout_constraintTop_toBottomOf="@id/loginheader"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/design_default_color_background"
            android:textSize="30sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="255dp"
        android:background="@drawable/white_logpanel"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="30dp"
            android:hint="@string/Email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:id="@+id/signup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="56dp"
        android:text="@string/signup"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Dont Have An Account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="SIGN UP"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:layout_height="74dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="111dp"
        android:background="@drawable/sign_button"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>







